--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.1.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.6.3",
+    "recharts": "^3.1.0",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
